crates/vite_task_plan/tests/plan_snapshots/fixtures/cache-keys/snapshots/query - lint and echo with extra args.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&plan_json"
info:
  args:
    - run
    - lint-and-echo
    - Linting complete
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/cache-keys
---
[
  {
    "key": [
      "<workspace>/",
      "lint-and-echo"
    ],
    "node": {
      "task_display": {
        "package_name": "",
        "task_name": "lint-and-echo",
        "package_path": "<workspace>/"
      },
      "items": [
        {
          "execution_item_display": {
            "task_display": {
              "package_name": "",
              "task_name": "lint-and-echo",
              "package_path": "<workspace>/"
            },
            "command": "vt tool print lint",
            "and_item_index": 0,
            "cwd": "<workspace>/"
          },
          "kind": {
            "Leaf": {
              "Spawn": {
                "cache_metadata": {
                  "spawn_fingerprint": {
                    "cwd": "",
                    "program_fingerprint": {
                      "OutsideWorkspace": {
                        "program_name": "vtt"
                      }
                    },
                    "args": [
                      "print",
                      "lint"
                    ],
                    "env_fingerprints": {
                      "fingerprinted_envs": {},
                      "untracked_env_config": [
                        "<default untracked envs>"
                      ]
                    }
                  },
                  "execution_cache_key": {
                    "UserTask": {
                      "task_name": "lint-and-echo",
                      "and_item_index": 0,
                      "extra_args": [],
                      "package_path": ""
                    }
                  },
                  "input_config": {
                    "includes_auto": true,
                    "positive_globs": [],
                    "negative_globs": []
                  }
                },
                "spawn_command": {
                  "program_path": "<tools>/vtt",
                  "args": [
                    "print",
                    "lint"
                  ],
                  "all_envs": {
                    "NO_COLOR": "1",
                    "PATH": "<workspace>/node_modules/.bin:<tools>:<tools>"
                  },
                  "cwd": "<workspace>/"
                }
              }
            }
          }
        },
        {
          "execution_item_display": {
            "task_display": {
              "package_name": "",
              "task_name": "lint-and-echo",
              "package_path": "<workspace>/"
            },
            "command": "echo 'Linting complete'",
            "and_item_index": 1,
            "cwd": "<workspace>/"
          },
          "kind": {
            "Leaf": {
              "InProcess": {
                "kind": {
                  "Echo": {
                    "strings": [
                      "Linting complete"
                    ],
                    "trailing_newline": true
                  }
                }
              }
            }
          }
        }
      ]
    },
    "neighbors": []
  }
]
