crates/vite_task_plan/tests/plan_snapshots/fixtures/cache-keys/snapshots/query - synthetic task with extra args in user task.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: err_str.as_ref()
info:
  args:
    - run
    - lint
    - "--fix"
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/cache-keys
---
Invalid vite task command: vt with args ["lint", "--fix"] under cwd "<workspace>/": cannot find binary path
